--- a/Analysis_code.Rmd
+++ b/Analysis_code.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Code for Analysis"
+title: <br> "Code for Analysis"
 author: "Joshua Sabik"
 date: "`r Sys.Date()`"
 output: html_document
